// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/.../AwardItem when editMode is false renders correctly 1`] = `
<div>
  <div
    className="profile-experience-block profile-unverified-status"
  >
    <div>
      <div
        className="relative"
      >
        <div
          className="Avatar Avatar-white Avatar-size-109"
        >
          <img
            alt="logo"
            src="https://appii.s3.eu-west-2.amazonaws.com/organisation_logos/aa-plc1509336690734.jpg"
          />
        </div>
        <p
          className="visible-xs visible-sm"
        >
          <i
            className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark"
            data-tooltip="Not verified"
          >
             
          </i>
        </p>
      </div>
      <div
        className="profile-experience-info"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark hidden-xs hidden-sm"
          data-tooltip="Not verified"
        >
           
        </i>
        <p>
          Award name
        </p>
        <span>
          AA plc
        </span>
        <em>
          
        </em>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../AwardItem when editMode is true renders correctly 1`] = `
<div>
  <div
    className="profile-experience-block profile-unverified-status"
  >
    <div
      className="profile-experience-btns"
    >
      <button
        className="edit-btn"
        onClick={[Function]}
      >
         
      </button>
    </div>
    <div>
      <div
        className="relative"
      >
        <div
          className="Avatar Avatar-white Avatar-size-109"
        >
          <img
            alt="logo"
            src="https://appii.s3.eu-west-2.amazonaws.com/organisation_logos/aa-plc1509336690734.jpg"
          />
        </div>
        <p
          className="visible-xs visible-sm"
        >
          <i
            className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark"
            data-tooltip="Not verified"
          >
             
          </i>
        </p>
      </div>
      <div
        className="profile-experience-info"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark hidden-xs hidden-sm"
          data-tooltip="Not verified"
        >
           
        </i>
        <p>
          Award name
        </p>
        <span>
          AA plc
        </span>
        <em>
          
        </em>
      </div>
    </div>
  </div>
</div>
`;
